fix: change to Arrays.asList to support java 8